--- a/openedx/core/djangoapps/schedules/templates/schedules/edx_ace/recurringnudge_day3/email/body.html
+++ b/openedx/core/djangoapps/schedules/templates/schedules/edx_ace/recurringnudge_day3/email/body.html
@@ -2,16 +2,24 @@
 {% load i18n %}
 
 {% block preview_text %}
-    {% blocktrans %} Learning isn't easy - but it's worth it! Learn something new in {{course_name}}. {% endblocktrans %}
+    {% blocktrans trimmed %}
+        Keep learning today. Remember when you enrolled in {{course_name}} on edX.org? We do, and we’re glad
+        to have you! Come see what everyone is learning.
+    {% endblocktrans %}
 {% endblock %}
 
 {% block content %}
 <table width="100%" align="left" border="0" cellpadding="0" cellspacing="0" role="presentation">
     <tr>
         <td>
-            <h1>{% blocktrans %} Remember when you enrolled in <strong>{{course_name}}</strong> on edX.org? {% endblocktrans %}</h1>
+            <h1>{% trans "Keep learning today" %}.</h1>
 
-            <p>{% blocktrans %} We do! Come see what everyone is learning. {% endblocktrans %}</p>
+            <p>
+                {% blocktrans trimmed %}
+                    Remember when you enrolled in <strong>{{ course_name }}</strong> on edX.org? We do, and we’re glad
+                    to have you! Come see what everyone is learning.
+                {% endblocktrans %}
+            </p>
 
             <p>
                 <!-- email client support for style sheets is pretty spotty, so we have to inline all of these styles -->
@@ -28,7 +36,8 @@
                     border-left: 16px solid #005686;
                     display: inline-block;
                 ">
-                        <font color="#ffffff"><b>{% blocktrans %} Start learning now {% endblocktrans %}</b></font>
+                    <!-- old email clients require the use of the font tag :( -->
+                    <font color="#ffffff"><b>{% trans "Keep learning" %}</b></font>
                 </a>
             </p>
         </td>
