--- a/cms/templates/videos_index.html
+++ b/cms/templates/videos_index.html
@@ -57,11 +57,9 @@
 
         <nav class="nav-actions" aria-label="${_('Page Actions')}">
             <h3 class="sr">${_("Page Actions")}</h3>
-            <ul>
-                <li class="nav-item">
-                    <button class="button course-video-settings-button"><span class="icon fa fa-cog" aria-hidden="true"></span> ${_("Course Video Settings")}</button>
-                </li>
-            </ul>
+            <div class="nav-item">
+                <button class="button course-video-settings-button"><span class="icon fa fa-cog" aria-hidden="true"></span> ${_("Course Video Settings")}</button>
+            </div>
         </nav>
     </header>
 </div>
