--- a/openedx/core/djangoapps/schedules/templates/schedules/edx_ace/common/base_body.html
+++ b/openedx/core/djangoapps/schedules/templates/schedules/edx_ace/common/base_body.html
@@ -14,7 +14,14 @@ email itself. -->
 ">
     {% block preview_text %}{% endblock %}
 </div>
+
+{# This "View on Web" link must appear in the document before any layout tables so that accessible email clients can #}
+{# send the user to a proper web browser which can parse the email correctly. #}
+
+{# Note {view_url} is not a template variable that is evaluated by the Django template engine. It is evaluated by #}
+{# Sailthru when the email is sent. Other email providers would need to replace this variable in the HTML as well. #}
 <a href="{view_url}">{% trans "View on Web" %}</a>
+{# Note this is another late-bound variable #}
 <img src="{beacon_src}" alt="" role="presentation" aria-hidden="true" />
 
 {% get_current_language as LANGUAGE_CODE %}
@@ -52,9 +59,9 @@ email itself. -->
                 <table role="presentation" width="100%" align="left" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                         <td width="70">
-                            <a href="http://www.edx.org"><img
+                            <a href="{{ homepage_url }}"><img
                                     src="https://media.sailthru.com/595/1k1/8/o/599f355101b3f.png" width="70"
-                                    height="30" alt="{{ platform_name }} Home Page"/></a>
+                                    height="30" alt="{% blocktrans %}{{ platform_name }} Home Page{% endblocktrans %}"/></a>
                         </td>
                         <td align="right" style="text-align: right;">
                             <a class="login" href="{{ dashboard_url }}" style="color: #005686;">{%  trans "Sign In" %}</a>
@@ -91,7 +98,7 @@ email itself. -->
                                                     <td height="32" width="42" align="right">
                                                         <a href="{{ social_media_urls.linkedin }}">
                                                             <img src="https://media.sailthru.com/595/1k1/8/o/599f354ec70cb.png"
-                                                                 width="32" height="32" alt="{{ platform_name }} on LinkedIn"/>
+                                                                 width="32" height="32" alt="{% blocktrans %}{{ platform_name }} on LinkedIn{% endblocktrans %}"/>
                                                         </a>
                                                     </td>
                                                 {% endif %}
@@ -99,7 +106,7 @@ email itself. -->
                                                     <td height="32" width="42" align="right">
                                                         <a href="{{ social_media_urls.twitter }}">
                                                             <img src="https://media.sailthru.com/595/1k1/8/o/599f354d9c26e.png"
-                                                                 width="32" height="32" alt="{{ platform_name }} on Twitter"/>
+                                                                 width="32" height="32" alt="{% blocktrans %}{{ platform_name }} on Twitter{% endblocktrans %}"/>
                                                         </a>
                                                     </td>
                                                 {% endif %}
@@ -107,7 +114,7 @@ email itself. -->
                                                     <td height="32" width="42" align="right">
                                                         <a href="{{ social_media_urls.facebook }}">
                                                             <img src="https://media.sailthru.com/595/1k1/8/o/599f355052c8e.png"
-                                                                 width="32" height="32" alt="{{ platform_name }} on Facebook"/>
+                                                                 width="32" height="32" alt="{% blocktrans %}{{ platform_name }} on Facebook{% endblocktrans %}"/>
                                                         </a>
                                                     </td>
                                                 {% endif %}
@@ -115,7 +122,7 @@ email itself. -->
                                                     <td height="32" width="42" align="right">
                                                         <a href="{{ social_media_urls.google_plus }}">
                                                             <img src="https://media.sailthru.com/595/1k1/8/o/599f354fc554a.png"
-                                                                 width="32" height="32" alt="{{ platform_name }} on Google Plus"/>
+                                                                 width="32" height="32" alt="{% blocktrans %}{{ platform_name }} on Google Plus{% endblocktrans %}"/>
                                                         </a>
                                                     </td>
                                                 {% endif %}
@@ -123,7 +130,7 @@ email itself. -->
                                                     <td height="32" width="42" align="right">
                                                         <a href="{{ social_media_urls.reddit }}">
                                                             <img src="https://media.sailthru.com/595/1k1/8/o/599f354e326b9.png"
-                                                                 width="32" height="32" alt="{{ platform_name }} on Reddit"/>
+                                                                 width="32" height="32" alt="{% blocktrans %}{{ platform_name }} on Reddit{% endblocktrans %}"/>
                                                         </a>
                                                     </td>
                                                 {% endif %}
@@ -155,13 +162,13 @@ email itself. -->
                                         {% if mobile_store_urls.apple %}
                                             <a href="{{ mobile_store_urls.apple }}" style="text-decoration: none">
                                                 <img src="https://media.sailthru.com/595/1k1/6/2/5931cfbba391b.png"
-                                                     alt="Download the iOS app on the Apple Store" width="136" height="50"/>
+                                                     alt="{% trans "Download the iOS app on the Apple Store" %}" width="136" height="50"/>
                                             </a>
                                         {% endif %}
                                         {% if mobile_store_urls.google %}
                                             <a href="{{ mobile_store_urls.google }}" style="text-decoration: none">
                                                 <img src="https://media.sailthru.com/595/1k1/6/2/5931cf879a033.png"
-                                                     alt="Download the Android app on the Google Play Store"
+                                                     alt="{% trans "Download the Android app on the Google Play Store" %}"
                                                      width="136" height="50" style="margin: 10px 0 0 5px"/>
                                             </a>
                                         {% endif %}
@@ -200,6 +207,8 @@ email itself. -->
     <![endif]-->
 
 </div>
+
+{# Debug info that is not user-visible #}
 <span id="ace-message-id" style="display:none;">{{ message.log_id }}</span>
 <span id="template-revision" style="display:none;">{{ template_revision }}</span>
 <span id="template-tag" style="display:none;">{{ template_tag }}</span>
