--- a/cms/templates/ux/reference/index.html
+++ b/cms/templates/ux/reference/index.html
@@ -9,17 +9,25 @@
 <%block name="bodyclass">ux-reference</%block>
 
 <%block name="content">
-<div class="main-wrapper">
-    <div class="inner-wrapper">
-        <div class="main-column">
-            <article class="window unit-body">
-                <h2>UX Style Reference</h2>
+<div class="wrapper-content wrapper">
+    <div class="content">
+        <div class="content-primary">
+            <h2>UX Style Reference</h2>
 
-                <ul>
-                    <a href="bootstrap/test.html">Bootstrap Test Page</a>
-                    <a href="pattern-library/test.html">Pattern Library Test Page</a>
-                </ul>
-            </article>
+            <h3>v1-style Pages</h3>
+            <ul>
+                <li><a href="v1/course-settings.html">Course settings page</a></li>
+            </ul>
+
+            <h3>Pattern Library</h3>
+            <ul>
+                <li><a href="pattern-library/test.html">Test page</a></li>
+            </ul>
+
+            <h3>Bootstrap</h3>
+            <ul>
+                <li><a href="bootstrap/course-settings.html">Course settings page</a></li>
+            </ul>
         </div>
     </div>
 </div>
