--- a/cms/static/sass/bootstrap/_layouts.scss
+++ b/cms/static/sass/bootstrap/_layouts.scss
@@ -78,16 +78,22 @@
     max-width: $studio-max-width;
     width: flex-grid(12);
     margin: 0 auto $baseline auto;
-    color: theme-color("primary");
+    color: $body-color;
   }
 
   .mast {
-    border-bottom: 1px solid $gray-500;
+    border-bottom: 1px solid $border-color;
     padding-bottom: ($baseline/2);
 
     // layout without actions
     .page-header {
-      width: flex-grid(12);
+      display: flex;
+      flex-direction: column;
+
+      .subtitle {
+        font-size: $font-size-base;
+        margin-bottom: $baseline/4;
+      }
     }
 
     // layout with actions
@@ -162,7 +168,7 @@
         display: inline-block;
         vertical-align: bottom; // correct for extra padding in FF
         max-width: 250px;
-        color: theme-color("primary");
+        color: $body-color;
 
         &.navigation-current {
           @extend %ui-disabled;
@@ -210,7 +216,7 @@
       float: left;
       width: flex-grid(12,12);
       margin-top: ($baseline/2);
-      border-top: 1px solid $gray-300;
+      border-top: 1px solid $border-color;
       padding-top: ($baseline/2);
       font-weight: 600;
     }
@@ -224,18 +230,25 @@
 
 // layout - basic page content
 .wrapper-content {
-  margin: 0;
-  padding: 0 $baseline;
-  position: relative;
+  @include make-container();
+  @include make-container-max-widths();
 }
 
+// Specify a two column layout for content
 .content {
-  @include clearfix();
-  @extend %t-copy-base;
-  max-width: $studio-max-width;
-  width: flex-grid(12);
-  margin: 0 auto;
-  color: theme-color("primary");
+  @include make-row();
+
+  @media (min-width: 576px) {
+    .content-primary {
+      flex: 0 0 66.67%;
+      max-width: 66.67%;
+    }
+
+    .content-supplementary {
+      flex: 0 0 25%;
+      max-width: 25%;
+    }
+  }
 
   header {
     position: relative;
@@ -260,26 +273,12 @@
   }
 }
 
-// 3/4 - 1/4 two col layout
-%two-col-1 {
-  .content-primary {
-    float: left;
-    margin-right: flex-gutter();
-    width: flex-grid(9,12);
-    box-shadow: none;
-    border: 0;
-    background-color: $white;
-  }
-
-  .content-supplementary {
-    float: left;
-    width: flex-grid(3,12);
-  }
-}
-
-
 // layout - primary content
 .content-primary {
+  border: 1px solid theme-color("dark");
+  background-color: theme-color("inverse");
+  padding: $baseline ($baseline*1.5);
+  margin-right: $baseline;
 
   .title-1 {
     @extend %t-title3;
