--- a/cms/templates/base.html
+++ b/cms/templates/base.html
@@ -107,7 +107,7 @@ from openedx.core.djangolib.markup import HTML
       </div>
 
       <main id="main" aria-label="Content" tabindex="-1">
-        <div id="content" class="content">
+        <div id="content">
         <%block name="content"></%block>
         </div>
       </main>
